force-app/main/default/objects/GitHub_Pull_Requests__x/GitHub_Pull_Requests__x.object-meta.xml
<CustomObject>
    <description>GitHub Pull Requests</description>
    <externalDataSource>Repo</externalDataSource>
    <externalName>GitHub Pull Requests</externalName>
    <label>GitHub Pull Requests</label>
    <pluralLabel>GitHub Pull Requests</pluralLabel>
</CustomObject>