force-app/main/default/objects/GitHub_Pull_Requests__x/fields/Merged__c.field-meta.xml
<CustomField>
    <fullName>Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Merged</description>
    <externalDeveloperName>Merged</externalDeveloperName>
    <label>Merged</label>
    <type>Checkbox</type>
</CustomField>