force-app/main/default/objects/GitHub_Pull_Requests__x/fields/MergedDate__c.field-meta.xml
<CustomField>
    <fullName>MergedDate__c</fullName>
    <description>MergedDate</description>
    <externalDeveloperName>MergedDate</externalDeveloperName>
    <label>MergedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>