force-app/main/default/objects/GitHub_Pull_Requests__x/fields/PRCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PRCreatedDate__c</fullName>
    <description>PRCreatedDate</description>
    <externalDeveloperName>PRCreatedDate</externalDeveloperName>
    <label>PRCreatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>