force-app/main/default/objects/GitHub_Pull_Requests__x/fields/PRUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>PRUpdatedDate__c</fullName>
    <description>PRUpdatedDate</description>
    <externalDeveloperName>PRUpdatedDate</externalDeveloperName>
    <label>PRUpdatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>