force-app/main/default/objects/GitHub_Pull_Requests__x/fields/PullRequestURL__c.field-meta.xml
<CustomField>
    <fullName>PullRequestURL__c</fullName>
    <description>PullRequestURL</description>
    <externalDeveloperName>PullRequestURL</externalDeveloperName>
    <label>PullRequestURL</label>
    <type>Url</type>
</CustomField>