force-app/main/default/objects/GitHub_Pull_Requests__x/fields/RepoName__c.field-meta.xml
<CustomField>
    <fullName>RepoName__c</fullName>
    <description>RepoName</description>
    <externalDeveloperName>RepoName</externalDeveloperName>
    <label>RepoName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>