force-app/main/default/objects/GitHub_Pull_Requests__x/fields/UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDate__c</fullName>
    <description>UpdatedDate</description>
    <externalDeveloperName>UpdatedDate</externalDeveloperName>
    <label>UpdatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>